Reduce commons-io usage
Rely on Java NIO more.
Make use of newer Java language features to simplify code.